Fixing spacing issue in mobile menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
 }
 .mobile-item {
   text-align: center;
-  padding: 0.25rem 0rem;
+  padding: 1rem .5rem 0rem 0rem;
   color: white;
   font-size: 1rem;
   margin-top: 1.25rem;
